k8s/apps/internal/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
      - name: it-tools
        image: corentinth/it-tools:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "300m"
