k8s/apps/internal/it-tools/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "it-tools.ravil.space"
  rules:
    - backendRefs:
        - name: it-tools
          port: 80
